--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -91,6 +91,10 @@
         a {
           color: black;
           text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
         }
       }
 
